--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "firebase-admin": "^11.10.0",
     "firebase": "^10.0.0",
-    "jsonwebtoken": "^9.0.0"
+    "firebase-admin": "^11.10.0",
+    "jsonwebtoken": "^9.0.0",
+    "mailersend": "^2.5.0"
   }
 }
